# TOPLauncher

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  README.md  TOPLauncher.sln
SqliteCpp/: SqliteCpp.vcxproj
TOPLauncher/: .gitignore  AppModel.cpp  AppModel.h  CMakeLists.txt  DlgAbout.cpp  DlgAbout.h  DlgAbout.ui  DlgLanguage.cpp  DlgLanguage.h  DlgLanguage.ui  DlgProgress.cpp  DlgProgress.h  DlgProgress.ui  DlgSJEJHHPack.cpp  DlgSJEJHHPack.h  DlgSJEJHHPack.ui  DlgSJEJHHUnpack.cpp  DlgSJEJHHUnpack.h  DlgSJEJHHUnpack.ui  DlgSettings.cpp  DlgSettings.h  DlgSettings.ui  Environment.cpp  Environment.h  LanguageItemModel.cpp  LanguageItemModel.h  LanguageModel.cpp  LanguageModel.h  LoginUserItem.cpp  LoginUserItem.h  LoginUserItem.ui  MainWidget.cpp  MainWidget.h  MainWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowBackground.cpp  MainWindowBackground.h  OverlayEffectWidget.cpp  (+36 more)
TOPLauncher/Resources/: TOPLauncher.qrc  about.html  high-dpi-unsupported.manifest  translations.json
TOPLauncher/Resources/translations/: en_US.ts  ja_JP.ts  zh_CN.ts
TOPLauncher/languages/: toplauncher_zh.ts  toplauncher_zh_tw.ts
fmt/: fmt.vcxproj  fmt.vcxproj.filters
sqlite3/: sqlite3.vcxproj.filters
